# MP-Transpose

./: CMakeLists.txt  Makefile  Matrix.h  main.c  main.cpp  main_mpi.cpp  run_tests.sh  run_tests_mpi.sh  transpose_mpi.cpp  transpose_openmp.cpp  transpose_regular.cpp
data/: report.md
